--- a/Latex/texto.bib
+++ b/Latex/texto.bib
@@ -1,4 +1,4 @@
-@conference{shiandtomasi,
+﻿@conference{shiandtomasi,
     author    = "Jianbo Shi and Carlo Tomasi",
     title     = "Good Features to Track",
     booktitle = "9th IEEE Conference on Computer Vision and Pattern Recognition",
@@ -11,3 +11,10 @@
    publisher =   "O'Reilly",
    year =        2008,
  }
+@CONFERENCE{canny86,
+AUTHOR       = {John Canny}, 
+TITLE        = {A Computational Aproach to Edge Detection},
+BOOKTITLE    = {IEEE Trans. On Pattern Analysis and Machine Inteligence},
+YEAR         = {1986},
+Pages        = {679-698},
+}
