--- a/Latex/texto.bib
+++ b/Latex/texto.bib
@@ -18,3 +18,10 @@ BOOKTITLE    = {IEEE Trans. On Pattern Analysis and Machine Inteligence},
 YEAR         = {1986},
 Pages        = {679-698},
 }
+@CONFERENCE{harris88,
+AUTHOR       = {Chris Harris and Mike Stephens}, 
+TITLE        = {A combined corner and edge detector},
+BOOKTITLE    = {Proceedings of the 4th Alvey Vision Conference},
+YEAR         = {1988},
+Pages        = {147–151},
+}
